[package]
name = "strike_ln_tipping"
version = "0.1.0"
authors = ["Nathan Harmon <nmharmon8@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
types = []
errors = ["reqwest"]
webhooks = ["types", "errors", "serde_json"]
tipping = ["types", "errors", "reqwest", "serde_json"]
default = []

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }

serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }



[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"]}
serde_json = { version = "1.0"}