[package]
name = "strike_ln_tipping"
version = "0.1.0"
authors = ["Nathan Harmon <nmharmon8@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
base = ["reqwest", "async-trait", "serde_json", "serde", "rand"]
tipping = ["base"]
default = ["base"]

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }
async-trait = { version="0.1.52", optional = true}
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = {version = "0.8.5", optional = true}


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"]}
serde_json = { version = "1.0"}