[package]
name = "strike-api"
version = "0.0.1"
authors = ["Nathan Harmon <nmharmon8@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = ["lightning", "bitcoin", "strike", "api", "lightning-network"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
description = "Strike lightning network API for the Bitcoin network."
repository = "https://github.com/nmharmon8/strike-api.git"
homepage = "https://theadventuresofaliceandbob.com/"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed: New features are being added and bugs are being fixed." }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
base = ["reqwest", "async-trait", "serde_json", "serde", "rand"]
tipping = ["base"]
default = ["base"]

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }
async-trait = { version="0.1.52", optional = true}
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = {version = "0.8.5", optional = true}


[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"]}
serde_json = { version = "1.0"}