[package]
name = "rust_lightning_tipping_qrcode"
version = "0.1.0"
edition = "2021"
author = "Nathan Harmon"

[dependencies]
# For this example you must include the tipping feature
strike-api = { git = "https://github.com/nmharmon8/strike-api.git", branch = "main", features = ["tipping"] }
# Any qrcode generation library
qrcode-generator = {version = "4.1.2"}
# Any multi-threading library
tokio = {version = "1.17.0", features = ["full"]}